modify http interface for v1
