# handler/dbcluster_member.go
@@ -1,28 +1,26 @@
 package handler
 
 import (
+	"github.com/dbrainhub/dbrainhub/api"
 	"github.com/dbrainhub/dbrainhub/controller"
 	"github.com/gin-gonic/gin"
 )
 
-func GetUnassignedDbClusterMembers(c *gin.Context) (interface{}, error) {
+func GetToAssignedDbClusterMembers(c *gin.Context) (interface{}, error) {
 	currUser, err := Authenticate(c)
 	if err != nil {
 		return nil, err
 	}
 
-	var p OffsetLimit
-	if err := c.BindQuery(&p); err != nil {
+	var req api.GetToAssignDbClusterMembersRequest
+	if err := c.BindQuery(&req); err != nil {
 		return nil, err
 	}
-	p.AutoAdjust()
+	req.Limit, req.Offset = autoAdjustLimitAndOffset(req.Limit, req.Offset)
 
-	members, err := controller.GetUnassignedDbClusterMembers(c, currUser, p.Offset, p.Limit)
-	if err != nil {
-		return nil, err
-	}
-	return map[string]interface{}{"members": members}, nil
+	return controller.GetToAssignDbClusterMembers(c, currUser, req.DbType, req.Env, req.IpPrefix, req.Limit, req.Offset)
 }
+
 func GetDbClusterMembers(c *gin.Context) (interface{}, error) {
 	currUser, err := Authenticate(c)
 	if err != nil {
@@ -36,11 +34,7 @@ func GetDbClusterMembers(c *gin.Context) (interface{}, error) {
 		return nil, err
 	}
 
-	members, err := controller.GetClusterMembers(c, currUser, params.ClusterId)
-	if err != nil {
-		return nil, err
-	}
-	return map[string]interface{}{"members": members}, nil
+	return controller.GetClusterMembers(c, currUser, params.ClusterId)
 }
 
 func AssignDbClusterMembers(c *gin.Context) (interface{}, error) {
@@ -56,16 +50,14 @@ func AssignDbClusterMembers(c *gin.Context) (interface{}, error) {
 		return nil, err
 	}
 
-	var pMemberIds struct {
-		MemberIds []int32 `json:"member_ids"`
-	}
-	if err := c.ShouldBindJSON(&pMemberIds); err != nil {
+	var req api.AssignDbClusterMembersRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
 		return nil, BadRequestError("json unsharmal err: %v", err)
 	}
 
-	err = controller.AssignClusterMembers(c, currUser, pClusterId.ClusterId, pMemberIds.MemberIds)
+	err = controller.AssignClusterMembers(c, currUser, pClusterId.ClusterId, req.MemberIds)
 	if err != nil {
 		return nil, err
 	}
-	return map[string]interface{}{}, nil
+	return &api.AssignDbClusterMembersResponse{}, nil
 }
